<resources>
    <string name="app_name">Solffeginator</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_page_intro">Za daljnja objašnjenja osnova "glazbene pismenosti" kliknite na jednu od donjih slika.</string>
    <string name="help_title_section1">Crtovlje</string>
    <string name="help_text_section1">Crtovlje je "mjesto" u kojem se pišu note. Djeca u prvom razredu osnovne muzičke škole to mesto zovu: "notni stan". Sastoji se od pet horizontalnih crta i četiri praznine izmedju mjih.</string>
    <string name="help_title_section2">Takt</string>
    <string name="help_text_section2">Svako crtovlje je "podijeljeno" na taktove. U takt ide onoliki broj nota koliko određuje mjera. Svaki takt je omeđen dvjema vertikalnim tankim crtama. Te crte se zovu taktice.</string>
    <string name="help_title_section3">Kljuc</string>
    <string name="help_text_section3">Ključ se piše na početku crtovlja odnosno kompozicije. On određuje gdje će se koja nota nalaziti i u kojoj će se oktavi pisati. Svaki ključ obuhvata 1-3 oktave. Iako se pomoću pomoćnih crta...</string>
    <string name="help_title_section4">Note</string>
    <string name="help_text_section4">Nota je ime znaka koji, u zavisnosti od pozicije u crtovlju, oznacava muzicki zvuk. Note mogu da budu razlicite duzine...</string>
    <string name="help_title_section5">Mjere</string>
    <string name="help_text_section5">Mjera određuje koliko će doba biti u taktu i koja nota će trajati jednu dobu. Piše se na početku crtovlja/kompozicije tj. poslije ključa i predznaka, ako ih ima. Nekakve brže kompozicije...</string>
    <string name="title_activity_topic">TopicActivity</string>
    <string name="no_help_available">Ne postoje informacije na navedenu temu.</string>
    <string name="topic_section1">
        <![CDATA[
         <p><h1>Crtovlje</h1></p>
         <p>
            Crtovlje je &quot;mjesto&quot; u kojem se pi&scaron;u note. Djeca u
            prvom razredu osnovne muzi&#269;ke &scaron;kole to mesto zovu:
            &quot;notni stan&quot;. Sastoji se od pet horizontalnih crta i
            &#269;etiri praznine izmedju mjih. Ispod i iznad crtovlja se
            jo&scaron; dodaju pomo&#263;ne crte po potrebi. Obi&#269;no se ne
            dodaje vi&scaron;e od 4 pomo&#263;ne crte jer se tada ve&#263;
            prelazi u drugi klju&#269; no nije pogre&scaron;ka ako se
            napi&scaron;e vi&scaron;e pomo&#263;nih crta. Crtovlje izgleda
            ovako:
         </p>
         <img src="crtovlje_pravo.gif">
        ]]>
    </string>
    <string name="topic_section2">
        <![CDATA[
        <p><h1>Takt</h1></p>
         <p>
            Svako crtovlje je &quot;podijeljeno&quot; na taktove. U takt ide
            onoliki broj koliko odre&#273;uje mjera. Svaki takt je ome&#273;en dvjema vertikalnim
            tankim crtama. Te crte se zovu taktice. Na kraju cijele kompozicije
            se nalazi dvostruka taktica (jedna tanka a jedna debela). Taktice
            izgledaju ovako:
         </p>
         <img src="takt_pravo.gif">
        ]]>
    </string>
    <string name="topic_section3">
        <![CDATA[
            <p><h1>Klju&#269;</h1></p>
         <p>
            Klju&#269; se pi&scaron;e na po&#269;etku crtovlja odnosno
            kompozicije. On odre&#273;uje gdje &#263;e se koja nota nalaziti i
            u kojoj &#263;e se oktavi pisati. Svaki klju&#269; obuhvata 1-3
            oktave. Iako se pomo&#263;u pomo&#263;nih crta mo&#382;e
            &quot;dogurati&quot; do bilo koje oktave, ni jedna kompozicija ne
            obuhvata 5-6 oktava iz &#269;istog razloga &scaron;to ni jedan glas
            a ni jedan instrument nema toliki raspon tonova.
         </p>
         <p>
            Kompozicije za gitaru, a i za mnogo drugih instrumenata, se
            pi&scaron;u u violinskom ili G klju&#269;u. On izgleda ovako:
         </p>
          <img src="kljuc_pravo.gif">
         <p>
            Nekada davno se je slovo G pisalo na ovaj nacin. Ako pogledate
            pa&#382;ljivo, primeti&#263;ete da ovaj klju&#269; zavija oko druge
            linije i time ozna&#269;ava da se nota napisana na drugoj liniji
            zove G.
         </p>
         <p>
            Raspored tonova u G klju&#269;u izgleda ovako:
             (Po&#269;et &#263;u od tre&#263;e pomo&#263;ne crte jer nema
            potrebe &scaron;ire pisati.)
         </p>
         <img src="raspored_pravo.gif">
         <p>
            Drugi klju&#269; koji koriste pogotovo klaviristi i basisti je bas
            ili F klju&#269;. On izgleda ovako:
         </p>
          <img src="baskljuc_pravo.gif">
         <p>
            Nekada davno se je slovo F pisalo na ovaj nacin. Ako pogledate
            pa&#382;ljivo, primeti&#263;ete da se nota F nalazi na
            &#269;etvrtoj liniji izme&#273;u dve ta&#269;ke.
         </p>
         <p>
            Raspored tonova u F klju&#269;u:
         </p>
         <img src="basraspored_pravo.gif">
         <p>
            Postoje i drugi klju&#269;evi, kao na primer ALTO ili TENOR, ali
            oni se ne pojavljuju toliko &#269;esto.
         </p>

        ]]>
    </string>
    <string name="topic_section4">
        <![CDATA[

            <p><h1>Note</h1></p>
         <p>
            Nota je ime znaka koji, u zavisnosti od pozicije u crtovlju,
            oznacava muzicki zvuk. Note mogu da budu razlicite duzine: <img src="duzinanota_pravo.gif">
         </p>
         <p>
            Ovako izgleda me&#273;usobni odnosi trajanja:
         </p>
         <img src="medjusobnaduzinanota_pravo.gif">
         <p>
            *Ovdje je jo&scaron; dodana &scaron;ezdeset&#269;etvrtinka. To je
            nota sa 4 &quot;repa&quot; ili &quot;zastavica.&quot;
         </p>

        ]]>
    </string>
</resources>